load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")

# PyO3 polyglot proof (#247). A trivial Rust extension built by rules_rust against
# the hermetic CPython, packaged as an importable Python extension module. This is
# the seam #219 (compiled native extension) and #224 (PyO3 host) build on.

# The extension as a cdylib. A Python extension module doesn't link libpython
# (pyo3 extension-module feature) — on macOS tell the linker to leave the Python
# symbols undefined at link time (the host interpreter resolves them at import).
# linux allows undefined symbols in a shared lib by default, so no flag there.
rust_shared_library(
    name = "demo_native",
    srcs = ["src/lib.rs"],
    edition = "2021",
    rustc_flags = select({
        "@platforms//os:macos": [
            "-Clink-arg=-undefined",
            "-Clink-arg=dynamic_lookup",
        ],
        "//conditions:default": [],
    }),
    deps = ["@crates//:pyo3"],
)

# Python imports `_demo` from a file literally named `_demo.so`; rules_rust emits
# lib<name>.dylib/.so, so copy it to the import name. (.dylib -> .so is fine —
# CPython on macOS loads a Mach-O .so extension module.) copy_file states the
# intent directly and is portable, unlike shelling out to `cp`.
copy_file(
    name = "demo_so",
    src = ":demo_native",
    out = "_demo.so",
    allow_symlink = False,
)

# Put _demo.so on the import path for dependents.
py_library(
    name = "demo",
    data = [":demo_so"],
    imports = ["."],
)

py_test(
    name = "smoke_test",
    size = "small",
    srcs = ["demo_smoke.py"],
    main = "demo_smoke.py",
    deps = [":demo"],
)

# The workspace layering check (//native:layering_check) reads every crate
# manifest; the demo is one of the two crates allowed to see pyo3.
exports_files(["Cargo.toml"])
