[package]
name = "shrike-cabi"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
# staticlib for the embedded smoke host (and the future XCFramework build);
# cdylib for dynamic embedders. Plain rlib kept for the Rust-side unit tests.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# The minimal kernel profile (#338): no onnx-embed → no ort linked. The
# embedded host registers its own embedder (or none — lexical-only).
shrike-kernel = { path = "../shrike-kernel", default-features = false }
shrike-ffi = { workspace = true }
futures = "0.3"
serde_json = "1"
tracing = "0.1"
