[package]
name = "shrike-cabi"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
# staticlib for the embedded smoke host (and the future XCFramework build);
# cdylib for dynamic embedders. Plain rlib kept for the Rust-side unit tests.
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# The kernel names no engine since #342 (it has no features at all) — no ort
# in this link. The embedded host registers its own embedder (or none —
# lexical-only).
shrike-kernel = { path = "../shrike-kernel" }
shrike-ffi = { workspace = true }
futures = "0.3"
serde_json = "1"
tracing = "0.1"
