load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//native:__subpackages__"])

exports_files(["Cargo.toml"])

# Rust collection core over anki's protobuf service layer (#278, slice 1).
# Pure Rust — NO pyo3 (enforced by //native:layering_check).
#
# `manual`: building this crate compiles the whole anki dependency tree and its
# protobuf codegen needs `protoc` on the build host, which the per-PR native
# lane doesn't provide. The cargo lane covers it locally
# (`cd native && cargo test -p shrike-collection`); the Bazel/protoc wiring is
# tracked on #278.
rust_library(
    name = "shrike_collection",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    tags = ["manual"],
    deps = [
        "//native/shrike-ffi:shrike_ffi",
        "@crates//:anki",
        "@crates//:anki_proto",
        "@crates//:prost",
        "@crates//:serde_json",
        "@crates//:tokio",
    ],
)

rust_test(
    name = "shrike_collection_test",
    size = "medium",
    crate = ":shrike_collection",
    tags = ["manual"],
)
