load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//native:__subpackages__"])

exports_files(["Cargo.toml"])

# Rust collection core over anki's protobuf service layer (#278, slice 1).
# Pure Rust — NO pyo3 (enforced by //native:layering_check).
#
# Builds the whole anki dependency tree; its protobuf codegen runs the
# hermetic protoc external (//native/third_party/protoc) via the crate
# annotations in MODULE.bazel — on the regular build graph since the cutover.
rust_library(
    name = "shrike_collection",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "//native/shrike-ffi:shrike_ffi",
        "@crates//:anki",
        "@crates//:anki_proto",
        "@crates//:base64",
        "@crates//:fancy-regex",
        "@crates//:prost",
        "@crates//:regex",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:ureq",
        "@crates//:url",
    ],
)

rust_test(
    name = "shrike_collection_test",
    size = "medium",
    crate = ":shrike_collection",
)
