[package]
name = "shrike-collection"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Rust collection core over anki's protobuf service layer (#278, slice 1)."

[lib]
name = "shrike_collection"

# Pure Rust — NO pyo3 (epic #265 convention 5); bound to Python in shrike-py
# behind its (default-off) `anki-core` feature.
#
# Consumption rule (#277 verdict review, binding): anki is consumed ONLY through
# its protobuf service layer — Backend::run_service_method + run_db_command_bytes,
# the exact surface pylib's rsbridge binds — never the bare crate API. Pin policy:
# tag == the pip wheel version, bumped together.
[dependencies]
shrike-ffi = { workspace = true }
shrike-store-api = { workspace = true }
# The typed read seam (#391 phase 2): the read surface returns the canonical
# wire types directly. schemas is a leaf (pure serde, no pyo3) — no cycle.
shrike-schemas = { path = "../shrike-schemas" }
anki = { git = "https://github.com/ankitects/anki", tag = "25.09.4", package = "anki" }
anki_proto = { git = "https://github.com/ankitects/anki", tag = "25.09.4", package = "anki_proto" }
prost = "0.13"
serde_json = "1"
# embed_text (#278 step 2): regex for the simple patterns; fancy-regex for the
# cloze pattern, which uses a lookahead the regex crate doesn't support — the
# Python pattern is kept verbatim (byte-identity contract).
regex = "1"
fancy-regex = "0.16"
# rslib relies on the anki workspace's feature unification: sibling crates
# enable tokio's io-util/etc., which an external consumer must re-enable.
tokio = { version = "1", features = ["full"] }
