load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//native:__subpackages__"])

exports_files(["Cargo.toml"])

# Fused search/upsert composition (#274): the embed→index fused paths for the
# standalone Python facade (retiring under #355). rrf_fuse moved to
# shrike_kernel::fusion (#380). Pure Rust — NO pyo3.
rust_library(
    name = "shrike_compute",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "//native/shrike-embed:shrike_embed",
        "//native/shrike-ffi:shrike_ffi",
        "//native/shrike-index:shrike_index",
    ],
)

rust_test(
    name = "shrike_compute_test",
    size = "small",
    crate = ":shrike_compute",
)
