load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//native:__subpackages__"])

exports_files(["Cargo.toml"])

# Native derived-text engine (#281): rusqlite + bundled SQLite (FTS5 + trigram
# always compiled in). Pure Rust — NO pyo3 (enforced by //native:layering_check).
rust_library(
    name = "shrike_derived",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    # Pinned explicitly (#499): the LINKAGE is bundled either way (crate-universe
    # resolves @crates//:rusqlite with the workspace-unified `bundled` feature),
    # but the crate's own `cfg!(feature = "bundled")` probe (`sqlite_bundled()`)
    # reads Bazel's crate_features — without the pin it reported platform
    # linkage under Bazel while actually linking bundled.
    crate_features = ["bundled"],
    deps = [
        "//native/shrike-ffi:shrike_ffi",
        "//native/shrike-store-api:shrike_store_api",
        "@crates//:rusqlite",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "shrike_derived_test",
    size = "small",
    crate = ":shrike_derived",
)
