# The remote VLM describe engine (#433): image→text descriptions over any
# OpenAI-compatible chat-completions endpoint — llama-server with a
# multimodal GGUF locally (--mmproj via shrike-llama-server's chat_mode), or
# a cloud service with a key. A per-concern engine crate behind the
# shrike-engine-api traits; the kernel never names it (layering rule).
[package]
name = "shrike-describe-remote"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
shrike-engine-api = { path = "../shrike-engine-api" }
shrike-ffi = { workspace = true }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
ureq = { version = "2", features = ["json"] }
