load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//native:__subpackages__"])

exports_files(["Cargo.toml"])

# The generic remote-embeddings engine (#342 P4): EmbedText over any
# OpenAI-compatible endpoint, ureq (synchronous, runtime-less). Knows
# nothing about subprocesses.
rust_library(
    name = "shrike_embed_remote",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "//native/shrike-engine-api:shrike_engine_api",
        "//native/shrike-ffi:shrike_ffi",
        "@crates//:base64",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tracing",
        "@crates//:ureq",
    ],
)

rust_test(
    name = "shrike_embed_remote_test",
    size = "small",
    crate = ":shrike_embed_remote",
)
