# The generic remote-embeddings engine (#342 P4): an EmbedText over ANY
# OpenAI-compatible embeddings endpoint. llama-server is just the on-device
# instance of the general case — the same client serves a cloud embedding
# service with an API key, or a service on the user's own device over a
# tailnet. Knows NOTHING about subprocesses (that's shrike-llama-server's
# concern, a separate crate).
[package]
name = "shrike-embed-remote"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
shrike-engine-api = { path = "../shrike-engine-api" }
shrike-ffi = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# SYNCHRONOUS client — no tokio, no runtime (the workspace's pinned
# runtime-less HTTP precedent, same as shrike-collection's media fetch).
ureq = { version = "2", features = ["json"] }
